Fix color contrast on strong elements

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -382,3 +382,8 @@ pre {
   }
 }
 
+strong {
+  color: #000;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
